Retoque menor en los iconos de redes sociales en la seccion de colaboradores

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                             </li>
                             <li><a href="#"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="#"><i class="fa fa-github"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -234,7 +234,7 @@
                             </li>
                             <li><a href="#"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="#"><i class="fa fa-github"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -249,7 +249,7 @@
                             </li>
                             <li><a href="#"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="#"><i class="fa fa-github"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -347,7 +347,7 @@
                         </li>
                         <li><a href="#"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="#"><i class="fa fa-github"></i></a>
                         </li>
                     </ul>
                 </div>
