--- a/templates.html
+++ b/templates.html
@@ -1,4 +1,5 @@
-<script id="template-objectives" type="test/template">
+<!-- Template que renderiza la seccion de Objetivos -->
+<script id="template-objectives" type="text/template">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -20,7 +21,9 @@
         </div>
     </div>
 </script>
-<script type="test/template" id="template-patrocinadores">
+
+<!-- Template que renderiza la seccion de patrocinadores -->
+<script type="text/template" id="template-patrocinadores">
     <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -61,4 +64,38 @@
         </div>
 </script>
 
+<!-- Template que renderiza la seccion de colaboradores -->
 
+<script type="text/template" id="template-colaboradores">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Nuestros Colaboradores</h2>
+                <h3 class="section-subheading text-muted">Ellos dedican su tiempo libre en las tareas logisticas necesarias en el grupo.</h3>
+            </div>
+        </div>
+        <div class="row">
+            {{#colaboradores}}
+            <div class="col-sm-4">
+                <div class="team-member">
+                    <img src="http://www.gravatar.com/avatar/{{hash}}" class="img-responsive img-circle" alt="">
+                    <h4>{{nombre}}</h4>
+                    <p class="text-muted">Colaborador</p>
+                    <ul class="list-inline social-buttons">
+                        <li>
+                            <a href="http://twitter.com/{{twitter}}" target="_blank"><i class="fa fa-twitter"></i></a>
+                        </li>
+                        <li>
+                            <a href="http://github.com/{{github}}"><i class="fa fa-github"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            {{/colaboradores}}
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <p class="large text-muted">Tú tambien puedes ser un colaborador o colaboradora. Escribenos a <a href="mailto:info@pereirajs.org">nuestro correo: info@pereirajs.org</a> y cuentanos con que te gustaría colaborar.</p>
+            </div>
+        </div>
+    </div>
+</script>
