Arreglo el bug de scrollspy que no estaba teniendo encuenta las plantillas de mustache

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 </head>
 
-<body id="page-top" class="index">
+<body id="page-top" class="index" data-spy="scroll">
 
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
