Agrego el 'fork me on github' de la pagina anterior

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
     <title>PereiraJS</title>
 
+    <!-- Cool PereJS icon -->
+    <link rel="shorcut icon" href="/images/favicon.ico"/>
+
     <!-- Bootstrap Core CSS -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet">
 
@@ -78,6 +81,8 @@
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container-fluid -->
+
+        <div id="github-ribbon"><a href="https://github.com/pereirajs/pagina"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Editame en GitHub"></a></div>
     </nav>
 
     <!-- Header -->
@@ -472,6 +477,7 @@
             </div>
         </div>
     </div>
+
 
     <!-- jQuery -->
     <script src="//code.jquery.com/jquery.js"></script>
