--- a/templates.html
+++ b/templates.html
@@ -1,26 +1,61 @@
 <!-- Template que renderiza la seccion de Objetivos -->
 <script id="template-objectives" type="text/template">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-              <h2 class="section-heading">{{title}}</h2>
-              <h3 class="section-subheading text-muted">{{description}}</h3>
-            </div>
-        </div>
-        <div class="row text-center">
-            {{#objectives}}
-            <div class="col-md-{{#objective_width}}{{objective_width}}{{/objective_width}}{{^objective_width}}4{{/objective_width}}">
-                <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa {{font_icon}} fa-stack-1x fa-inverse"></i>
-                </span>
-                <h4 class="service-heading">{{objective_name}}</h4>
-                <p class="text-muted">{{objective_description}}</p>
-            </div>
-            {{/objectives}}
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">{{title}}</h2>
+        <h3 class="section-subheading text-muted">{{description}}</h3>
+      </div>
     </div>
+    <div class="row text-center">
+      {{#objectives}}
+      <div class="col-md-{{#objective_width}}{{objective_width}}{{/objective_width}}{{^objective_width}}4{{/objective_width}}">
+        <span class="fa-stack fa-4x">
+          <i class="fa fa-circle fa-stack-2x text-primary"></i>
+          <i class="fa {{font_icon}} fa-stack-1x fa-inverse"></i>
+        </span>
+        <h4 class="service-heading">{{objective_name}}</h4>
+        <p class="text-muted">{{objective_description}}</p>
+      </div>
+      {{/objectives}}
+    </div>
+  </div>
 </script>
+
+<!-- Template que renderiza la seccion de evento -->
+<script type="text/template" id="template-evento">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">Evento</h2>
+        <h3 class="section-subheading text-muted">{{description}}</h3>
+      </div>
+    </div>
+
+    <div class="row">
+      {{#eventos}}
+      <div class="col-md-4 col-sm-6 portfolio-item">
+        <a href="{{url_slides}}" class="portfolio-link" data-toggle="modal">
+          <div class="portfolio-hover">
+            <div class="portfolio-hover-content">
+              <h4>{{nombre}}</h4>
+              <p class="text-muted">{{descripcion}}</p>
+            </div>
+          </div>
+        </a>
+        <div class="portfolio-caption">
+          <h4> Speaker(s)</h4>
+          {{#speakers}}
+            <p class="text-muted"><a href="{{url_contacto}}">{{nombre_speaker}}</a></p>
+          {{/speakers}}
+        </div>
+      </div>
+      {{/eventos}}
+    </div>
+  </div>
+</script>
+
+
 
 <!-- Template que renderiza la seccion de patrocinadores -->
 <script type="text/template" id="template-patrocinadores">
