Mejora a la cabecera principal del sitio
La cabecera ahora ocupa el 100% de la ventana de la cual se vea el
sitio y alinea verticalmente los texto de lead e intro, de forma
natural y completamente responsive.

--- a/index.html
+++ b/index.html
@@ -86,15 +86,13 @@
     </nav>
 
     <!-- Header -->
-    <header>
-        <div class="container">
-            <div class="intro-text" style="padding-top:160px;">
-                <div class="intro-lead-in">
-                    <img class="img-rounded" src="/images/LogoOficial.png" /><br>PEREIRA.JS
-                </div>
-                <div class="intro-heading">Comunidad de aprendizaje del lenguaje Javascript</div>
-            </div>
-        </div>
+    <header class="main-header">
+        <figure class="intro-text">
+            <h1 class="intro-lead-in">
+                <img class="img-rounded" src="/images/LogoOficial.png" /><br>PEREIRA.JS
+            </h1>
+            <figcaption class="intro-heading">Comunidad de aprendizaje del lenguaje Javascript</figcaption>
+        </figure>
     </header>
 
     <!-- Objectives Section -->
