Cambiando el fondo del timeline por blanco
– El último ítem del timeline se mantiene de fondo azul y enlace de
color blanco
– Se remueve el estilo inline de color blanco del enlace para el último
item del timeline. Dont inline styles plase

--- a/templates.html
+++ b/templates.html
@@ -96,7 +96,7 @@
                         {{/patrocinadores}}
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4><a href="#contact" class="text-primary" style="color:#fff;">Quiero
+                                <h4><a href="#contact" class="text-primary">Quiero
                                     <br>Patrocinar!</a></h4>
                             </div>
                         </li>
