Agrego el boton al navbar para la proxima reunion y defino el espacio incial. El boton no se sobrepone con el logo de arriba

--- a/templates.html
+++ b/templates.html
@@ -62,6 +62,34 @@
   </div>
 </script>
 
+<!-- Template que renderiza el anuncio de la proxima reunion -->
+<script type="text/template" id="template-next-meet">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">Nuestra Próxima Reunión</h2>
+        <h3 class="section-subheading text-muted">La entrada es gratuita pero requerimos reservación previa. Son 2 charlas de una hora cada charla, luego un espacio de networking y snacks.</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-3 col-lg-offset-3">
+        <span class="fa-stack fa-5x">
+          <i class="fa fa-circle fa-stack-2x text-primary"></i>
+          <i class="fa fa-slideshare fa-stack-1x fa-inverse"></i>
+        </span>
+      </div>
+      <div class="col-lg-6">
+        <h4> Septima reunión PereiraJS</h4>
+        <pre>
+        Fecha: 26 de febrero
+        Hora: 6:30pm;
+        Lugar: ViveLab Pereira.
+        Direccion: 
+        </pre>
+      </div>
+    </div>
+  </div>
+</script>
 
 
 <!-- Template que renderiza la seccion de patrocinadores -->
