Habilito los botones de reservar y ver el mapa tambien hago que saque los datos desde data.json

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </header>
 
     <!-- Seccion de la proxima reunion -->
-    <section id="next-meet">
+    <section id="next-meet" class="bg-light-gray">
     </section>
 
     <!-- Objectives Section -->
