--- a/templates.html
+++ b/templates.html
@@ -68,24 +68,67 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">Nuestra Próxima Reunión</h2>
-        <h3 class="section-subheading text-muted">La entrada es gratuita pero requerimos reservación previa. Son 2 charlas de una hora cada charla, luego un espacio de networking y snacks.</h3>
+        <h3 class="section-subheading text-muted">La entrada es gratuita pero requerimos reservación previa ya que los cupos son limitados.<br> Son 2 charlas de una hora cada charla, luego un espacio de networking y snacks.</h3>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-3 col-lg-offset-3">
-        <span class="fa-stack fa-5x">
+      <div class="col-lg-3 col-lg-offset-2">
+        <span class="fa-stack" style="font-size:8em;">
           <i class="fa fa-circle fa-stack-2x text-primary"></i>
           <i class="fa fa-slideshare fa-stack-1x fa-inverse"></i>
         </span>
       </div>
-      <div class="col-lg-6">
-        <h4> Septima reunión PereiraJS</h4>
-        <pre>
-        Fecha: 26 de febrero
-        Hora: 6:30pm;
-        Lugar: ViveLab Pereira.
-        Direccion: 
-        </pre>
+      <div class="col-lg-7 bg-info" style="border-radius:15px;">
+        <h2 class="text-info">{{evento_proximo.nombre}}</h2>
+        <dl class="dl-horizontal" style="font-size:25px">
+          <dt>Fecha:</dt>
+          <dd>{{evento_proximo.fecha}}</dd>
+          <dt>Hora:</dt>
+          <dd>{{evento_proximo.hora}}</dd>
+          <dt>Lugar:</dt>
+          <dd>{{evento_proximo.lugar}}</dd>
+          <dt>Dirección:</dt>
+          <dd>{{evento_proximo.direccion}}</dd>
+        </dl>
+        <div class="text-center" style="margin:20px;">
+          <button type="button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#formModal" style="font-size:30px;">Reservar!</button>
+          <button type="button" class="btn btn-lg btn-success" data-toggle="modal" data-target="#mapaModal" style="font-size:30px;">Ver Mapa</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Modal -->
+  <div class="modal fade" id="formModal" tabindex="-1" role="dialog" aria-labelledby="formModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title" id="formModalLabel">Reservar Cupo</h4>
+        </div>
+        <div class="modal-body">
+          <iframe src="{{evento_proximo.url_reservas}}" width="558" height="650" frameborder="0" marginheight="0" marginwidth="0">Cargando...</iframe>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Mapa -->
+  <div class="modal fade" id="mapaModal" tabindex="-1" role="dialog" aria-labelledby="mapaComoLlegar" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title" id="mapaComoLlegar">Mapa ViveLab Pereira</h4>
+        </div>
+        <div class="modal-body">
+          <iframe src="{{evento_proximo.url_mapa}}" width="558" height="600"></iframe>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+        </div>
       </div>
     </div>
   </div>
