elijo un mejor nombre en data.jsonm

--- a/templates.html
+++ b/templates.html
@@ -79,16 +79,16 @@
         </span>
       </div>
       <div class="col-lg-7 bg-info" style="border-radius:15px;">
-        <h2 class="text-info">{{evento_proximo.nombre}}</h2>
+        <h2 class="text-info">{{proximo.nombre}}</h2>
         <dl class="dl-horizontal" style="font-size:25px">
           <dt>Fecha:</dt>
-          <dd>{{evento_proximo.fecha}}</dd>
+          <dd>{{proximo.fecha}}</dd>
           <dt>Hora:</dt>
-          <dd>{{evento_proximo.hora}}</dd>
+          <dd>{{proximo.hora}}</dd>
           <dt>Lugar:</dt>
-          <dd>{{evento_proximo.lugar}}</dd>
+          <dd>{{proximo.lugar}}</dd>
           <dt>Dirección:</dt>
-          <dd>{{evento_proximo.direccion}}</dd>
+          <dd>{{proximo.direccion}}</dd>
         </dl>
         <div class="text-center" style="margin:20px;">
           <button type="button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#formModal" style="font-size:30px;">Reservar!</button>
