Agrego el formulario actualizado de reservas

--- a/templates.html
+++ b/templates.html
@@ -106,7 +106,7 @@
           <h4 class="modal-title" id="formModalLabel">Reservar Cupo</h4>
         </div>
         <div class="modal-body">
-          <iframe src="{{evento_proximo.url_reservas}}" width="558" height="650" frameborder="0" marginheight="0" marginwidth="0">Cargando...</iframe>
+          <iframe src="{{proximo.url_reservas}}" width="558" height="650" frameborder="0" marginheight="0" marginwidth="0">Cargando...</iframe>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -124,7 +124,7 @@
           <h4 class="modal-title" id="mapaComoLlegar">Mapa ViveLab Pereira</h4>
         </div>
         <div class="modal-body">
-          <iframe src="{{evento_proximo.url_mapa}}" width="558" height="600"></iframe>
+          <iframe src="{{proximo.url_mapa}}" width="558" height="600"></iframe>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
