Inicio el formulario de contacto

--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contáctanos</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Cualquier palabra que quieras expresarnos es bien recibida.</h3>
+                    <h3 class="section-subheading text-muted">info@pereirajs.org | @PereiraJS </h3>
                 </div>
             </div>
             <div class="row">
@@ -160,28 +161,28 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+                                    <input type="text" class="form-control" placeholder="Su Nombre *" id="name" required data-validation-required-message="Porfavor ingrese su nombre.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                                    <input type="email" class="form-control" placeholder="Su Correo *" id="email" required data-validation-required-message="Ingrese su direccion de correo.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                    <input type="text" class="form-control" placeholder="Su Twitter" id="twitter">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                    <textarea class="form-control" placeholder="Su Mensaje *" id="message" required data-validation-required-message="Ingrese su mensaje."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Send Message</button>
+                                <button type="submit" class="btn btn-xl">Enviar Mensaje.</button>
                             </div>
                         </div>
                     </form>
@@ -200,7 +201,7 @@
                     <ul class="list-inline social-buttons">
                         <li><a href="https://twitter.com/pereirajs_"><i class="fa fa-twitter"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
+                        <li><a href="https://www.facebook.com/javascriptpereira"><i class="fa fa-facebook"></i></a>
                         </li>
                         <li><a href="https://github.com/pereirajs"><i class="fa fa-github"></i></a>
                         </li>
