--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
         <!-- /.container-fluid -->
 
-        <div id="github-ribbon"><a href="https://github.com/pereirajs/pagina"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Editame en GitHub"></a></div>
+        <!-- <div id="github-ribbon"><a href="https://github.com/pereirajs/pagina"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Editame en GitHub"></a></div> -->
     </nav>
 
     <!-- Header -->
