--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </section>
 
     <!-- Clients Aside -->
-    <aside class="clients">
+    <!-- <aside class="clients">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
@@ -144,7 +144,7 @@
                 </div>
             </div>
         </div>
-    </aside>
+    </aside>-->
 
     <section id="contact">
         <div class="container">
@@ -160,6 +160,8 @@
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
                             <div class="col-md-6">
+                                <h2 class="section-heading" style="font-size:1.7em;">Envianos un mensaje directo!</h2>
+                                <br><br>
                                 <div class="form-group">
                                     <input type="text" class="form-control" placeholder="Su Nombre *" id="name" required data-validation-required-message="Porfavor ingrese su nombre.">
                                     <p class="help-block text-danger"></p>
@@ -172,20 +174,55 @@
                                     <input type="text" class="form-control" placeholder="Su Twitter" id="twitter">
                                     <p class="help-block text-danger"></p>
                                 </div>
-                            </div>
-                            <div class="col-md-6">
                                 <div class="form-group">
                                     <textarea class="form-control" placeholder="Su Mensaje *" id="message" required data-validation-required-message="Ingrese su mensaje."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
-                            </div>
-                            <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center">
                                 <div id="success"></div>
                                 <button type="submit" class="btn btn-xl">Enviar Mensaje.</button>
                             </div>
-                        </div>
                     </form>
+                            <div class="col-md-6">
+                              <!-- Begin MailChimp Signup Form -->
+                              <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+                              <style type="text/css">
+  #mc_embed_signup{background:#222; clear:left; font:14px Helvetica,Arial,sans-serif; color:#fff}
+    /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+         We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+                              </style>
+                              <div id="mc_embed_signup">
+                                <form action="//pereirajs.us3.list-manage.com/subscribe/post?u=e13ea1549764b6a59c175a6cd&amp;id=3113a9f7af" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                                      <div id="mc_embed_signup_scroll">
+                                          <h2 class="section-heading">Subscríbete a nuestra lista de correo</h2>
+                                          <div class="indicates-required"><span class="asterisk">*</span> campos obligatorios.</div>
+                                          <div class="mc-field-group form-group">
+                                              <label for="mce-EMAIL">Correo Electrónico  <span class="asterisk">*</span>
+                                              </label>
+                                                <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL">
+                                          </div>
+                                          <div class="mc-field-group form-group">
+                                              <label for="mce-FNAME">Nombre(s)</label>
+                                                <input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME">
+                                          </div>
+                                          <div class="mc-field-group form-group">
+                                              <label for="mce-LNAME">Apellidos</label>
+                                                <input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME">
+                                          </div>
+                                          <div id="mce-responses" class="clear">
+                                              <div class="response" id="mce-error-response" style="display:none"></div>
+                                              <div class="response" id="mce-success-response" style="display:none"></div>
+                                          </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                          <div style="position: absolute; left: -5000px;"><input type="text" name="b_e13ea1549764b6a59c175a6cd_3113a9f7af" tabindex="-1" value=""></div>
+                                          <br>
+                                          <div class="clear"><input type="submit" value="Suscribeme!" name="subscribe" id="mc-embedded-subscribe" class="btn btn-xl"></div>
+                                       </div>
+                                 </form>
+                               </div>
+                               <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+                               <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+                                                                            <!--End mc_embed_signup-->
+                            </div>
+                        </div>
                 </div>
             </div>
         </div>
