Agrego los links para los slides de Jonathan

--- a/templates.html
+++ b/templates.html
@@ -51,7 +51,7 @@
                     {{nombre}}
                 {{/url_slides}}
                 {{#url_slides}}
-                    <a href="{{url_slides}}">{{nombre}}</a>
+                    <a target="_blank" href="{{url_slides}}">{{nombre}}</a>
                 {{/url_slides}}
             </p>
           {{/conferencias}}
