--- a/index.html
+++ b/index.html
@@ -209,9 +209,7 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
-                        </li>
-                        <li><a href="#">Terms of Use</a>
+                        <li><a target="_blank" href="https://github.com/colombia-dev/codigo-de-conducta">Código de conducta</a>
                         </li>
                     </ul>
                 </div>
