--- a/templates.html
+++ b/templates.html
@@ -95,7 +95,12 @@
         </dl>
         <div class="text-center" style="margin:20px;">
           <button type="button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#formModal" style="font-size:30px;">Reservar!</button>
-          <button type="button" class="btn btn-lg btn-success" data-toggle="modal" data-target="#mapaModal" style="font-size:30px;">Ver Mapa</button>
+          {{#proximo.url_mapa}}
+            <button type="button" class="btn btn-lg btn-success" data-toggle="modal" data-target="#mapaModal" style="font-size:30px;">Ver Mapa</button>
+          {{/proximo.url_mapa}}
+          {{#proximo.mas_info}}
+            <a href="{{proximo.mas_info}}" class="btn btn-lg btn-success" style="font-size:30px;" role="button">Más Información</a>
+          {{/proximo.mas_info}}
         </div>
       </div>
     </div>
