--- a/templates.html
+++ b/templates.html
@@ -71,7 +71,6 @@
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">Nuestra Próxima Reunión</h2>
         <h3 class="section-subheading text-muted">La entrada es gratuita pero requerimos reservación previa ya que los cupos son limitados.<br> Son 2 charlas de una hora cada charla, luego un espacio de networking y snacks.</h3>
-        <h3 class="section-subheading text-muted">No te pierdas nuestro próximo evento, <a href="#contact" class="page-scroll">subscríbete a nuestra lista de correo</a></h3>
       </div>
     </div>
     <div class="row">
@@ -81,7 +80,7 @@
           <i class="fa fa-slideshare fa-stack-1x fa-inverse"></i>
         </span>
       </div>
-      <div class="col-lg-7 bg-info" style="border-radius:15px;">
+      <div id="infoNextEvent" class="col-lg-7 bg-info" style="border-radius:15px;">
         <h2 class="text-info">{{proximo.nombre}}</h2>
         <dl class="dl-horizontal" style="font-size:25px">
           <dt>Fecha:</dt>
@@ -102,6 +101,11 @@
             <a href="{{proximo.mas_info}}" class="btn btn-lg btn-success" style="font-size:30px;" role="button">Más Información</a>
           {{/proximo.mas_info}}
         </div>
+      </div>
+      <div id="noInfoEvent" class="col-lg-7 bg-info" style="border-radius:15px;display:none">
+        <h2 class="text-info">Aún no tenemos un evento programado</h2>
+        <h3 class="section-subheading text-muted">No te pierdas nuestro próximo evento,
+        <a href="#contact" class="page-scroll">subscríbete a nuestra lista de correo</a></h3>
       </div>
     </div>
   </div>
