--- a/templates.html
+++ b/templates.html
@@ -71,6 +71,7 @@
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">Nuestra Próxima Reunión</h2>
         <h3 class="section-subheading text-muted">La entrada es gratuita pero requerimos reservación previa ya que los cupos son limitados.<br> Son 2 charlas de una hora cada charla, luego un espacio de networking y snacks.</h3>
+        <h3 class="section-subheading text-muted">No te pierdas nuestro próximo evento, <a href="#contact" class="page-scroll">subscríbete a nuestra lista de correo</a></h3>
       </div>
     </div>
     <div class="row">
