Elimino el Gmaps y ponemos una imagen como mapa al vivelab

--- a/templates.html
+++ b/templates.html
@@ -130,14 +130,15 @@
 
   <!-- Mapa -->
   <div class="modal fade" id="mapaModal" tabindex="-1" role="dialog" aria-labelledby="mapaComoLlegar" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog" style="width:800px;">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
           <h4 class="modal-title" id="mapaComoLlegar">Mapa ViveLab Pereira</h4>
         </div>
         <div class="modal-body">
-          <iframe src="{{proximo.url_mapa}}" width="558" height="600"></iframe>
+          <img src="/images/mapaViveLab.jpg" width="750px" />
+          <a href="/images/mapaViveLab.jpg" target="_blank">Ver mapa en tamaño completo</a>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
