--- a/templates.html
+++ b/templates.html
@@ -103,10 +103,10 @@
           {{/proximo.mas_info}}
         </div>
       </div>
-      <div id="noInfoEvent" class="col-lg-7 bg-info" style="border-radius:15px;display:none">
+      <div id="noInfoEvent" class="col-lg-7 bg-info" style="border-radius:15px;display:none;padding-bottom:10px;">
         <h2 class="text-info">Aún no tenemos un evento programado</h2>
-        <h3 class="section-subheading text-muted">No te pierdas nuestro próximo evento,
-        <a href="#contact" class="page-scroll">subscríbete a nuestra lista de correo</a></h3>
+        <h3 class="section-subheading text-muted" style="margin-bottom:10px;">No te pierdas nuestro próximo evento, suscribete a nuestra lista de correo y recibe las ultimas noticias sobre la comunidad y los eventos futuros</h3>
+        <p><a href="#contact" class="page-scroll btn btn-primary">subscríbete a nuestra lista de correo</a></p>
       </div>
     </div>
   </div>
