--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                               <div id="mc_embed_signup">
                                 <form action="//pereirajs.us3.list-manage.com/subscribe/post?u=e13ea1549764b6a59c175a6cd&amp;id=3113a9f7af" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                       <div id="mc_embed_signup_scroll">
-                                          <h2 class="section-heading">Subscríbete a nuestra lista de correo</h2>
+                                          <h2 class="section-heading">Suscríbete a nuestra lista de correo</h2>
                                           <div class="indicates-required"><span class="asterisk">*</span> campos obligatorios.</div>
                                           <div class="mc-field-group form-group">
                                               <label for="mce-EMAIL">Correo Electrónico  <span class="asterisk">*</span>
