--- a/index.html
+++ b/index.html
@@ -163,19 +163,19 @@
                                 <h2 class="section-heading" style="font-size:1.7em;">Envianos un mensaje directo!</h2>
                                 <br><br>
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Su Nombre *" id="name" required data-validation-required-message="Porfavor ingrese su nombre.">
+                                    <input type="text" class="form-control" placeholder="Tu Nombre *" id="name" required data-validation-required-message="Porfavor ingresa tu nombre.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Su Correo *" id="email" required data-validation-required-message="Ingrese su direccion de correo.">
+                                    <input type="email" class="form-control" placeholder="Tu Correo *" id="email" required data-validation-required-message="Ingresa tu dirección de correo.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Su Twitter" id="twitter">
+                                    <input type="text" class="form-control" placeholder="Tu Twitter" id="twitter">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="Su Mensaje *" id="message" required data-validation-required-message="Ingrese su mensaje."></textarea>
+                                    <textarea class="form-control" placeholder="Tu Mensaje *" id="message" required data-validation-required-message="Ingresa tu mensaje."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div id="success"></div>
