remove log and change meta_title by title

--- a/templates.html
+++ b/templates.html
@@ -46,7 +46,7 @@
            -->
         <img alt="{{nombre}}" class="img-responsive img-thumbnail" src="{{feature_image}}">
         <div class="portfolio-caption">
-          <h4>{{meta_title}}</h4>
+          <h4>{{title}}</h4>
             <p class="text-muted">
                 {{meta_description}}
             </p>
