Adds link to from event cards to blog posts.

--- a/templates.html
+++ b/templates.html
@@ -34,7 +34,7 @@
 
     <div class="row">
       {{#posts}}
-      <div class="col-md-4 col-sm-6 portfolio-item"style="min-height:40em;">
+      <a class="col-md-4 col-sm-6 portfolio-item" style="min-height:40em;" href="{{url}}">
         <!--
            <a data-toggle="modal" class="portfolio-link" href="#portfolioModal1">
              <div class="portfolio-hover">
@@ -51,7 +51,7 @@
                 {{meta_description}}
             </p>
         </div>
-      </div>
+      </a>
       {{/posts}}
     </div>
   </div>
