Fix and Avoid the Mixed Content

--- a/templates.html
+++ b/templates.html
@@ -178,15 +178,15 @@
             {{#colaboradores}}
             <div class="col-sm-4">
                 <div class="team-member">
-                    <img src="http://www.gravatar.com/avatar/{{hash}}" class="img-responsive img-circle" alt="">
+                    <img src="//www.gravatar.com/avatar/{{hash}}" class="img-responsive img-circle" alt="">
                     <h4>{{nombre}}</h4>
                     <p class="text-muted">Colaborador</p>
                     <ul class="list-inline social-buttons">
                         <li>
-                            <a href="http://twitter.com/{{twitter}}" target="_blank"><i class="fa fa-twitter"></i></a>
+                            <a href="//twitter.com/{{twitter}}" target="_blank"><i class="fa fa-twitter"></i></a>
                         </li>
                         <li>
-                            <a href="http://github.com/{{github}}"><i class="fa fa-github"></i></a>
+                            <a href="//github.com/{{github}}"><i class="fa fa-github"></i></a>
                         </li>
                     </ul>
                 </div>
